# TrustedAutonomy

./: .envrc.example  .gitignore  .release-draft.md  .release.toml  .ta-decisions.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  dev  flake.nix  install.sh  install_local.sh  justfile  ta.desktop  version.json
.github/workflows/: ci.yml  jetbrains-plugin.yml  nightly-validate.yml  nightly.yml  nvim-plugin.yml  plugin-release.yml  release.yml  vscode-extension.yml
.ta/: constitution.toml  goal-audit.jsonl  plan_history.jsonl  release-history.json  setup-progress.json  velocity-history.jsonl  workflow.toml
agents/: codex.toml  gemma4-12b.toml  gemma4-12b.yaml  gemma4-4b.yaml  generic.yaml  qwen3.5-27b.toml  qwen3.5-4b.toml  qwen3.5-9b.toml  releaser.yaml
apps/ta-cli/: Cargo.toml
crates/ta-advisor/: Cargo.toml
crates/ta-advisor/src/: classify.rs  coordinator.rs  lib.rs  pipeline.rs
crates/ta-agent-ollama/: Cargo.toml
crates/ta-audit/: Cargo.toml
crates/ta-brain/: Cargo.toml
crates/ta-brain/src/: classify.rs  decision.rs  input.rs  lib.rs  priority.rs  queue.rs  route.rs
crates/ta-build/: Cargo.toml
crates/ta-build/src/: adapter.rs  backend.rs  cargo.rs  lib.rs  npm.rs  registry.rs  script.rs  webhook.rs
crates/ta-changeset/: Cargo.toml
crates/ta-credentials/: Cargo.toml
crates/ta-daemon/: Cargo.toml
crates/ta-daemon/assets/: index.html  shell.html
crates/ta-daemon/src/: channel_dispatcher.rs  channel_listener_manager.rs  config.rs  connector_supervisor.rs  external_channel.rs  headroom_supervisor.rs  main.rs  office.rs  power_manager.rs  project_context.rs  prompt_optimizer_supervisor.rs  router.rs  transport.rs  watchdog.rs  web.rs
crates/ta-daemon/src/api/: active.rs  advisor.rs  agent.rs  agent_profiles.rs  cmd.rs  context_upload.rs  dashboard_advisor.rs  draft_dialog.rs  drain.rs  goal_output.rs  health.rs  health_signals.rs  input.rs  links.rs  mod.rs  notifications.rs  persona.rs  plan.rs  settings.rs  stats.rs  status.rs  team.rs  webhooks.rs  workflow.rs
crates/ta-data-spec/: Cargo.toml
crates/ta-data-spec/src/: lib.rs
crates/ta-data-spec/tests/: round_trip.rs  schema_sync.rs  studio_boundary.rs
crates/ta-db-proxy/: Cargo.toml
crates/ta-db-proxy-sqlite/: Cargo.toml
crates/ta-decision/: Cargo.toml
crates/ta-decision/src/: gate.rs  lib.rs  meter.rs
crates/ta-extension/: Cargo.toml
crates/ta-goal/: Cargo.toml
crates/ta-governed-paths/: Cargo.toml
crates/ta-governed-paths/src/: config.rs  error.rs  journal.rs  lib.rs  manager.rs  sha_store.rs
crates/ta-init/: Cargo.toml
crates/ta-init/src/: bundled.rs  engine.rs  feature.rs  lib.rs  scaffold.rs
crates/ta-intake/: Cargo.toml
crates/ta-intake/src/: discovery.rs  email.rs  event.rs  lib.rs  manifest.rs  queue.rs  schedule.rs  webhook.rs
crates/ta-mcp-gateway/: Cargo.toml
crates/ta-mcp-gateway/src/: config.rs  interceptor.rs  lib.rs  server.rs  verify_audit.rs
crates/ta-mcp-gateway/src/tools/: agent.rs  community.rs  draft.rs  event.rs  fs.rs  goal.rs  human_verify.rs  mod.rs  plan.rs  unity.rs  unreal.rs
crates/ta-mediation/: Cargo.toml
crates/ta-memory/: Cargo.toml
crates/ta-plugin/: Cargo.toml
crates/ta-plugin/src/: discovery.rs  envelope.rs  error.rs  lib.rs  manifest.rs  transport.rs
crates/ta-plugin/tests/: cross_family_unification.rs
crates/ta-policy/: Cargo.toml
crates/ta-runtime/: Cargo.toml
crates/ta-runtime/src/: auth_spec.rs  bare_process.rs  framework.rs  lib.rs  plugin.rs  sandbox.rs  sandbox_windows.rs
crates/ta-runtime/src/channels/: claude_code.rs  codex.rs  generic_file.rs  mod.rs  ollama.rs
crates/ta-sandbox/: Cargo.toml
crates/ta-session/: Cargo.toml
crates/ta-session/src/: action_audit.rs  action_router.rs  advisor_agent.rs  agent_action.rs  intent_agent.rs  lib.rs  team.rs  workflow_session.rs
crates/ta-submit/: Cargo.toml
crates/ta-workflow/: Cargo.toml
crates/ta-workspace/: Cargo.toml  build.rs
docs/: ADR-architecture-reconciliation-2026-07.md  ADR-modularity-revisit-2026-07.md  ADR-product-concept-model.md  Agent-Messaging-Protocol.md  MISSION-AND-SCOPE.md  PLUGIN-AUTHORING.md  TA-CONSTITUTION.md  USAGE.md  VISION-virtual-office.md  WHY-TA-vs-VM.md  agent-framework-options.md  agent-resource-strategy.md  community-db-plugin.md  community-ide-plugin.md  file-system-strategy.md  interactive-sessions.md  market-readiness-plan.md  plugin-traits.md  plugins-architecture-guidance.md  pragma-ue5-ta-setup.md  public-beta-pr.md  trust-metrics.md  user-experience.md  workflow-v0.6.md
docs/architecture/: ta-architecture-reference.md
docs/design/: sage-lore-review.md  ta-action-reference.md  ta-cli-verb-reference.md  ta-concepts-and-architecture.md  ta-data-format-spec.md  ta-user-personas.md
docs/guides/: code-project-workflow.md  discord-channel.md  gmail-channel.md  native-channels-plan.md  slack-channel.md  what-is-ta.md  why-constitution.md
docs/releases/: v0.9.8-alpha.md
examples/: workflow.toml
images/icons/: ta.icns
memory/: work_queue.md
plugins/bmad/: plugin.toml
plugins/claude-flow/: plugin.toml
plugins/jetbrains-ta/: build.gradle.kts  gradle.properties  settings.gradle.kts
plugins/meridian/: plugin.toml
plugins/nvim-ta/: README.md  nvim-ta-scm-1.rockspec
plugins/ta-agent-ollama/: README.md  plugin.toml
plugins/ta-community-hub/: Cargo.toml  plugin.toml
plugins/ta-community-hub/src/: cache.rs  main.rs  registry.rs
plugins/ta-db-proxy-mysql/: Cargo.toml  plugin.toml
plugins/ta-db-proxy-mysql/src/: main.rs
plugins/ta-db-proxy-postgres/: Cargo.toml  plugin.toml
plugins/ta-db-proxy-postgres/src/: main.rs
plugins/ta-db-proxy-sqlite/: Cargo.toml  plugin.toml
plugins/ta-db-proxy-sqlite/src/: main.rs
schema/: artifact.schema.json  draft.schema.json  goal.schema.json  persona.schema.json  routing_decision.schema.json  trigger_event.schema.json
scripts/: bump-version.sh  diagnose-windows-stack-overflow.ps1  publish-crates.sh  setup-windows-dev.ps1  ta-git-post-receive.sh  ta-p4-trigger.sh  ta-shell.ps1  ta-shell.sh
templates/: pragma.toml
(+276 files in other folders)
