[package]
name = "ta-advisor"
version.workspace = true
edition = "2021"
description = "Smart Advisor — intent classification and conversational routing for Studio"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "advisor"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Reuses the existing heuristic classifier as the substrate for the new
# 4-way taxonomy rather than duplicating keyword-matching logic.
ta-session = { path = "../ta-session", version = "0.17.0-alpha.12.27" }
# Team-coordinator capability (v0.17.0.12.20): reuses ta-intake's TriggerEvent
# and ta-brain's routing/prioritization rather than a new persistent role —
# see crates/ta-advisor/src/coordinator.rs for the decision rationale.
ta-intake = { path = "../ta-intake", version = "0.17.0-alpha.12.27" }
ta-brain = { path = "../ta-brain", version = "0.17.0-alpha.12.27" }

[dev-dependencies]
tempfile = { workspace = true }
uuid = { workspace = true }
