[package]
name = "ta-brain"
version.workspace = true
edition = "2021"
description = "Trusted Autonomy routing brain: workload classification, privilege derivation, and prioritization shared by every goal-creation entry point"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "routing", "privilege"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
ta-session = { path = "../ta-session", version = "0.17.0-alpha.12.24" }
ta-goal = { path = "../ta-goal", version = "0.17.0-alpha.12.24" }
ta-intake = { path = "../ta-intake", version = "0.17.0-alpha.12.24" }

[dev-dependencies]
tempfile = { workspace = true }
uuid = { workspace = true }
