[package]
name = "ta-brain"
version.workspace = true
edition = "2021"
description = "Trusted Autonomy routing brain: workload classification, privilege derivation, and prioritization shared by every goal-creation entry point"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "routing", "privilege"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
ta-session = { path = "../ta-session", version = "0.17.0-alpha.12.29" }
ta-goal = { path = "../ta-goal", version = "0.17.0-alpha.12.29" }
ta-intake = { path = "../ta-intake", version = "0.17.0-alpha.12.29" }
# Folds ta-workflow's template-matching intent resolver in as one signal
# route() consults (v0.17.0.12.23), rather than a second, parallel intent
# system — see route.rs's resolve_workflow_template().
ta-workflow = { path = "../ta-workflow", version = "0.17.0-alpha.12.29" }

[dev-dependencies]
tempfile = { workspace = true }
uuid = { workspace = true }
