[package]
name = "ta-build"
version.workspace = true
edition = "2021"
description = "Build adapter abstraction for Trusted Autonomy"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
