[package]
name = "ta-decision"
version.workspace = true
edition = "2021"
description = "Generic Write/Review/Decision/Commit/Reject gate shared across TA's approval surfaces"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "approval", "governance"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
