[package]
name = "ta-governed-paths"
version.workspace = true
edition = "2021"
description = "Managed paths: SHA content-addressed filesystem and URI journal for Trusted Autonomy"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "filesystem", "journal"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
