[package]
name = "ta-intake"
version.workspace = true
edition = "2021"
description = "Trigger layer for Trusted Autonomy: data-defined trigger types producing normalized TriggerEvents that feed goal creation"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "trigger", "intake"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
ta-submit = { path = "../ta-submit", version = "0.17.0-alpha.12.27" }

[dev-dependencies]
tempfile = { workspace = true }
