[package]
name = "ta-plugin"
version.workspace = true
edition = "2021"
description = "Shared JSON-over-stdio plugin transport, manifest, and discovery for Trusted Autonomy Plugin-category integrations"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "plugin"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
ta-submit = { path = "../ta-submit" }
ta-runtime = { path = "../ta-runtime" }
