[package]
name = "ta-runtime"
version.workspace = true
edition = "2021"
description = "Runtime Adapter Trait for Trusted Autonomy agent process management"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "runtime", "process"]
categories = ["development-tools"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
which = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

ta-credentials = { path = "../ta-credentials", version = "0.16.4-alpha" }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = { workspace = true }
