[package]
name = "ta-session"
version.workspace = true
edition = "2021"
description = "Session & Human Control Plane — continuous conversation lifecycle for TA goals"
license = "Apache-2.0"
repository = "https://github.com/trustedautonomy/ta"
homepage = "https://github.com/trustedautonomy/ta"
keywords = ["ai", "agent", "autonomy", "session", "control"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# flock(2) for concurrent-safe audit log writes
libc = { workspace = true }
# file-watcher for event-driven draft polling (falls back to poll on unavailability)
notify = { workspace = true }
# team.toml serialization/deserialization
toml = { workspace = true }

# Workspace crates
ta-goal = { path = "../ta-goal", version = "0.17.0-alpha.10" }
ta-changeset = { path = "../ta-changeset", version = "0.17.0-alpha.10" }

[dev-dependencies]
tempfile = { workspace = true }
