[workspace]

[package]
name = "ta-community-hub"
version = "0.1.0"
edition = "2021"
description = "Community Knowledge Hub plugin for Trusted Autonomy — context hub integration via JSON-over-stdio protocol"
license = "Apache-2.0"

[[bin]]
name = "ta-community-hub"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
