[workspace]

[package]
name = "ta-db-proxy-mysql"
version = "0.1.0"
edition = "2021"
description = "MySQL/MariaDB database proxy plugin for Trusted Autonomy — external JSON-over-stdio plugin (v0.17.1)"
license = "Apache-2.0"

[[bin]]
name = "ta-db-proxy-mysql"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mysql = { version = "28", default-features = false, features = ["minimal-rust"] }
mysql_cdc = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
