[workspace]

[package]
name = "ta-db-proxy-sqlite"
version = "0.1.0"
edition = "2021"
description = "SQLite database proxy plugin for Trusted Autonomy — external JSON-over-stdio plugin (v0.17.1)"
license = "Apache-2.0"

[[bin]]
name = "ta-db-proxy-sqlite"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
